--- a/weather/src/App.css
+++ b/weather/src/App.css
@@ -7,7 +7,7 @@
 
 .logo {
   height: 6em;
-  padding: 1.5em;
+  
   will-change: filter;
   transition: filter 300ms;
 }
@@ -15,16 +15,6 @@
   filter: drop-shadow(0 0 1em #65baffaa);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
+.legal {
   color: #888;
 }
