--- a/weather/src/App.css
+++ b/weather/src/App.css
@@ -1,7 +1,6 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -15,7 +14,7 @@
 }
 
 .legal {
-  color: #888;
+  color: #979797;
   padding-left: 5em;
   padding-bottom: 2px;
 }
@@ -27,9 +26,9 @@
   width:100%;
   margin: 0;
   padding: 0;
+
   background: rgb(85, 85, 85, .7);
   color: #f1f1f1;
-
   text-align: left;
 }
 .textboxC {
@@ -38,10 +37,20 @@
   transform: translate(-50%, -50%);
   top: 3.5em;
 }
+::placeholder {
+  text-align: center;
+  color: #48adffc4;
+}
 input[type="text"] {
   width: 400px;
   height: 30px;
   font-size: 14pt;
+
+  border-radius: 25px;
+  border: 2px solid #48adffc4;
+  padding: 5px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .container {
@@ -60,7 +69,7 @@ body {
 }
 
 p, h1 {
-  filter: drop-shadow(1px 1px black);
+  filter: drop-shadow(1.5px 1.5px black);
   padding: 0;
   margin: 0;
 }
