--- a/src/App.css
+++ b/src/App.css
@@ -65,16 +65,24 @@
 .textbutton {
   position: absolute;
   right: 0;
-  border-radius: 25px;
+  border-radius: 0px 25px 25px 0px;
   border: 2px solid #48adffc4;
 
   color: #48adffc4;
   background-color: #2e2e3600;
 }
 .textbutton:hover {
-  border:2px solid #6966ff;
+  border: 2px solid #6966ff;
   color: #6966ff;
 }
+.textbutton:active {
+  transform: scale(.95,.95);
+  transform-origin: center;
+  margin: -2px;
+  border: 4px solid #6966ff;
+  color: #6966ff;
+}
+
  /* Bacground image */
 body {
   background-image: url("assets/background.jpg");
