--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,19 @@ body {
   padding: 0;
   margin: 0;
 }
+
+.card {
+  width: 200px;
+  height: 250px;
+  border-radius: 30px;
+  box-shadow: 14px 14px 20px rgba(0, 0, 0, 0.55);
+  background: rgba(173, 217, 250, 0.5);
+
+  transition: all .5s .3s ease, background .5s ease;
+}
+.card:hover {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
+  background: rgba(173, 217, 250, 0.0);
+
+  transition: all .5s ease, background .5s .3s ease;
+}
