--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   text-align: center;
 }
 
- /* Everything for the header: logo, text under logo, and textbox with button */
+ /* header container, logo, and text under logo */
 .header {
   position: absolute;
   right: 0em;
@@ -33,6 +33,7 @@
   margin: 0;
 }
 
+/* container for textbox */
 .textboxC {
   position: absolute;
   left: 50%;
@@ -46,6 +47,7 @@
   color: #6966ff;;
 }
 
+/* textbox and its button */
 .textbox {
   width: 306.5px;
   height: 30px;
@@ -99,19 +101,26 @@ body {
   padding: 0;
   margin: 0;
 }
+.time {
+  font-size: 30pt;
+}
 
 .card {
   width: 200px;
   height: 250px;
   border-radius: 30px;
-  box-shadow: 14px 14px 20px rgba(0, 0, 0, 0.55);
+  box-shadow: 14px 14px 20px rgba(0, 0, 0, .3);
   background: rgba(173, 217, 250, 0.5);
+  border: .2px solid rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(1.5px);
 
-  transition: all .5s .3s ease, background .5s ease;
+  transition: all .5s .25s ease, background .5s ease;
 }
 .card:hover {
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
-  background: rgba(173, 217, 250, 0.0);
+  background: rgba(173, 217, 250, 0.2);
+  border: .2px solid rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(1px);
 
-  transition: all .5s ease, background .5s .3s ease;
+  transition: all .55s ease, background .5s .25s ease;
 }
