--- a/src/App.css
+++ b/src/App.css
@@ -113,10 +113,20 @@ body {
 
   paint-order: stroke fill;
 }
+.loc {
+  font-weight: 650;
+  letter-spacing: -1px;
+  line-height: 0.9;
+  text-shadow: 1.3px 1.3px black;
+
+  font-size: 16px;
+  padding: 0;
+  margin: 0;
+}
 
 .card {
   width: 200px;
-  height: 240px;
+  height: 235px;
   margin: 2px;
   border-radius: 30px;
   box-shadow: 14px 14px 20px rgba(0, 0, 0, .3);
