Added github button

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   text-align: center;
 }
 
- /* header container, logo, and text under logo */
+ /* header container, logo, and text under logo, and social buttons */
 .header {
   position: absolute;
   right: 0em;
