--- a/src/App.css
+++ b/src/App.css
@@ -31,15 +31,22 @@
   margin: 0;
 }
 
+.fillC {
+  position: absolute;
+  top: 12px;
+  right: 20px;
+
+  vertical-align: auto;
+}
 .Git {
   height: 50px;
   margin: 0;
   padding: 0;
+  margin-bottom: 4px;
 
-  position: absolute;
-  top: 35px;
-  right: 20px;
   border-radius: 20%;
+  display: flex;
+  flex-direction: column;
 
   background: linear-gradient(to bottom, white 50%, grey 50%);
   background-size: 100% 200%;
