--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@ body {
   background-size: 100px;
 }
 
-/* data in the center of the page */
+/* center of the page */
 .info {
   text-shadow: 1.5px 1.5px black;
   padding: 0;
