--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,10 @@
   padding-left: 5em;
   padding-bottom: 2px;
   margin: 0;
+
+  @media (max-width: 800px) {
+    font-size: 10pt;
+  }
 }
 
 /* social buttons */
@@ -38,6 +42,10 @@
   right: 20px;
 
   vertical-align: auto;
+  @media (max-width: 800px) {
+    right: 2px;
+    top: 2px;
+  }
 }
 #Linkedin {
   background: linear-gradient(to bottom, white 50%, lightgrey 50%);
@@ -77,6 +85,11 @@
   left: 50%;
   transform: translate(-50%, -50%);
   top: 3.5em;
+  @media (max-width: 800px) {
+    top: 119%;
+    left: 50%;
+    transform: translate(-100%, -50%);
+  }
 }
 ::placeholder {
   color: #48adffc4;
@@ -97,6 +110,12 @@
   padding-left: 16px;
   padding-right: 93.5px;
   background-color: #2e2e36;
+  @media (max-width: 800px) {
+    width: 130%;
+    margin: 0px;
+    margin-left: 5px;
+    padding: auto;
+  }
 }
 .textbox:focus {
   outline: none !important;
@@ -111,6 +130,9 @@
 
   color: #48adffc4;
   background-color: #2e2e36;
+  @media (max-width: 800px) {
+    right: -100%;
+  }
 }
 .textbutton:hover {
   border: 2px solid #6966ff;
@@ -179,6 +201,10 @@ body {
   backdrop-filter: blur(1.5px);
 
   transition: all .5s .25s ease, background .5s ease;
+  @media (max-width: 800px) {
+    width: 75%;
+    height: 110%;
+  }
 }
 .card:hover {
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
@@ -190,10 +216,19 @@ body {
 }
 .cardForcast {
   height: 180px;
+  @media (max-width: 800px) {
+    padding-top: 10px;
+    height: 220px;
+  }
 }
 
 .infoC {
-  margin-left: 204px;
+  margin-left: 33%;
+  
+  @media (max-width: 800px) {
+    padding-top: 5%;
+    margin-left: 20%;
+  }
 }
 .forcastContainer {
   display: flex;
